@@ -9,6 +9,7 @@
 * enhancements
   * scopes can now be specified for an association combobox in Grid/FormPanels
   * GridPanel: you can now configure add/edit/multi_edit/search panels (e.g. to override the fields) and corresponding windows (e.g. to override the title)
+  * GridPanel: moved static js out of grid_panel_js.rb
 
 = v0.5.12 - 2010-06-21
 * Fix: when used with Bundler, was crashing with the "uninitialized constant" exception
